--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -12,7 +12,10 @@
     {{> header}}
 
 <p>Use this site to get your weather!</p>
-
+<form>
+  <input placeholder="Location">
+  <button>Search</button>
+</form>
     </div>
 
 
