--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -4,7 +4,7 @@
     <link rel="icon" href="/img/weather.jpg">
     <link rel='stylesheet' href='/css/style.css' />
     <!--rel = relation -->
-    <script src='/js/app.js'></script>
+    
   </head>
 
   <body>
@@ -16,9 +16,16 @@
   <input placeholder="Location">
   <button>Search</button>
 </form>
+
+<!-- if our targetted element are same name than use unique_id -->
+<p id="message-1"></p>
+<p id="message-2"></p>
+
     </div>
 
 
     {{> footer}}
+
+    <script src='/js/app.js'></script>
   </body>
 </html>
